# fintra

./: .gitignore  README.md  pyproject.toml
finfeatures/: ibkr.py
fintra/: __init__.py  volume.py
fintra/utils/: ibkr_client.py
