[project]
name = "fintra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ibapi>=9.81.1.post1",
    "metatrader5>=5.0.5735",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "python-dateutil>=2.9.0.post0",
    "six>=1.17.0",
    "tzdata>=2026.1",
]
